@@ -1,3 +1,12 @@
+2009-01-08  Marek Habersack  <mhabersack@novell.com>
+
+	* configure.in: added the --with-remove-display configure
+	parameter to enable removing of the DISPLAY variable
+	from the mod-mono-server backend's environment. Fixes bug #464225
+
+	* src/mod_mono.c (fork_mod_mono_server): remove the DISPLAY
+	variable from the child process environment if mod_mono was
+	compiled with REMOVE_DISPLAY defined. Fixes bug #464225
 
 2008-10-27 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
